Test resource embedding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(gameroom VERSION 0.1 LANGUAGES C)
+project(gameroom VERSION 0.1 LANGUAGES C RC)
 
 set(EXECUTABLE_OUTPUT_PATH ./${CMAKE_BUILD_TYPE})
 
 add_executable(gameroom
+    res/resource.rc
     src/main.c
 )
 
